fix layout break

--- a/packages/augur-ui/src/modules/app/components/top-nav/top-nav.styles.less
+++ b/packages/augur-ui/src/modules/app/components/top-nav/top-nav.styles.less
@@ -101,15 +101,6 @@
       }
     }
 
-    > .MigrateRep {
-      button {
-        .mono-10-bold;
-        text-transform: uppercase;
-      }
-      position: absolute;
-      right: calc(96px + @size-48);
-    }
-
     > .BettingUI {
       position: absolute;
       right: @size-32;
@@ -166,6 +157,14 @@ button.AddFunds {
       fill: @color-brand;
       height: 1px;
       width: @size-8;
+    }
+  }
+}
+
+.MigrateRep {
+  > button {
+    @media all and (min-width: @tablet-min) and (max-width: 800px) {
+      font-size: @size-8;
     }
   }
 }
